2005-03-09  Miles Bader  <miles@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-variable-ref)
	(byte-compile-obsolete): Change " since VER" to " (as of Emacs VER)".

2005-03-09  Kenichi Handa  <handa@m17n.org>

	* international/latin-1.el: Set case and syntax for 255 only if
	set-case-syntax-set-multibyte is nil.

	* textmodes/ispell.el (ispell-insert-word): New function. 
	(ispell-word): Use ispell-insert-word to isnert a new word.
	(ispell-process-line): Likewise
	(ispell-complete-word): Likewise.

2005-03-09  Glenn Morris  <gmorris@ast.cam.ac.uk>

	* calendar/calendar.el (redraw-calendar): Preserve point.
	Reported by Matt Hodges <MPHodges@member.fsf.org>.
	(calendar-week-start-day): Move after definition of
	redraw-calendar.  Delete buffer test, since redraw-calendar has
	that now.

	* calendar/diary-lib.el (mark-diary-entries): Only call
	redraw-calendar in the first of any recursive calls.
	Reported by Alan Shutko <ats@acm.org>.

2005-03-08  Juri Linkov  <juri@jurta.org>

	* textmodes/sgml-mode.el (sgml-tag, html-tag-alist)
	(html-horizontal-rule, html-line, html-image, html-checkboxes)
	(html-radio-buttons): Add a space before the trailing `/>' where
	sgml-xml-mode is non-nil.
	(sgml-delete-tag): Check if the tag ends with `/>' to not delete
	the subsequent tag of the empty XML tag.
	(html-href-anchor): Don't set initial input to "http:".
	(html-image): Ask for the image URL and set point inside alt="".
	(html-name-anchor): Duplicate the name in the `id' attribute when
	sgml-xml-mode is non-nil.
	(html-paragraph): Remove \n before <p>.
	(html-checkboxes, html-radio-buttons): Insert `checked="checked"'
	instead of `checked' when sgml-xml-mode is non-nil.

	* facemenu.el (list-colors-print): Print #RRGGBB in default face.
	Remove 1 space before #RRGGBB to not truncate it on terminal
	windows w/o fringes.  Remove 1 space between bg and fg examples
	to get more space.
	(list-colors-duplicates): Replace `and' with `if' for `boundp' to